# msp

./: BTFL_cli_UTAT_UAS_20240317_203635_TMOTORF7.txt  BTFL_cli_UTAT_UAS_20240320_153921_TMOTORF7.txt  CMakeLists.txt  README.md  package.xml
launch/: betaflight.launch
src/: Client.cpp  FlightController.cpp  PeriodicTimer.cpp  betaflight_node.cpp  motor_test.cpp
thrust_maps/: thrust_map_default.csv  thrust_map_hover.csv
